<resources>
    <string name="app_name">Linphone</string>
    <string name="service_name">Linphone Service</string>
    <string name="addressbook_label">Linphone</string>
    <string name="notification_title">Linphone</string>
    <string name="wait_dialog_text">Starting up</string>
    <string name="notification_registered">%s registered</string>
    <string name="notification_register_failure">%s failed to register</string>
    <string name="tunnel_host"></string>
    <string name="about_version">Linphone Android %s</string>
    <string name="about_liblinphone_version">Linphone Core %s</string>
    <string name="about_link">www.linphone.org</string>
    <string name="sync_account_name">linphone contacts</string>
    <string name="username">Username</string>
    <string name="userid">User-id (optional)</string>
    <string name="phone_number">Phone number</string>
    <string name="display_name">Display name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Password confirmation</string>
    <string name="domain">Domain</string>
    <string name="remote_provisioning_url">URL</string>
    <string name="email">Email</string>
    <string name="delete_text">Are you sure you want to delete your selection?</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="open">Open</string>
    <string name="continue_text">Continue</string>
    <string name="about">About</string>
    <string name="deny">Deny</string>
    <string name="no_account">No account configured</string>
    <string name="search">Search</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="missed">Missed</string>
    <string name="settings">Settings</string>
    <string name="connect">Connection</string>
    <string name="decline">Decline</string>
    <string name="conference">Conference</string>
    <string name="link">Link</string>
    <string name="link_account_popup">Do you want to link the account %s with your phone number?</string>
    <string name="maybe_later">Maybe later</string>
    <string name="later">Later</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="link_account">Link your account</string>
    <string name="update_available">An update is available</string>
    <string name="do_not_ask_again">Do not ask again</string>
    <string name="app_description">the <i>libre</i> SIP client</string>
    <string name="welcome">Welcome</string>
    <string name="assistant">Assistant</string>
    <string name="assistant_create_account">Create account</string>
    <string name="assistant_link_account">Link account</string>
    <string name="assistant_continue">Continue</string>
    <string name="assistant_activate">Activate your account</string>
    <string name="assistant_finish">Finish configuration</string>
    <string name="assistant_validate_account_1">Your account is created. Please check your mails to validate your account:</string>
    <string name="assistant_validate_account_2">Once it is done, come back here and click on the button.</string>
    <string name="assistant_welcome_desc">This assistant will help you configure and use your SIP account.</string>
    <string name="assistant_linphone_login_desc">Please enter your username and password of Linphone account</string>
    <string name="assistant_login_desc">Please enter your username and password with your SIP domain</string>
    <string name="assistant_remote_provisioning_desc">Please provide your provisioning URL</string>
    <string name="transport">Transport</string>
    <string name="assistant_create_account_phone_number_address">Your SIP address is</string>
    <string name="assistant_login_linphone">Use Linphone account</string>
    <string name="assistant_login_generic">Use SIP account</string>
    <string name="assistant_remote_provisioning">Fetch remote configuration</string>
    <string name="assistant_create_account_part_1">Please confirm your country code and enter your phone number</string>
    <string name="assistant_create_account_part_2">We have sent you a SMS with a validation code to your phone number:</string>
    <string name="assistant_create_account_part_3">To complete your phone number verification, please enter the 4 digit code below:\n</string>
    <string name="assistant_create_account_part_email">Please enter an username, email and password for your Linphone account</string>
    <string name="assistant_display_name_optional">Display name (optional)</string>
    <string name="assistant_linphone_account">Use your Linphone account</string>
    <string name="assistant_generic_account">Use SIP account</string>
    <string name="assistant_remote_provisioning_title">Fetch remote configuration</string>
    <string name="assistant_fetch_apply">Fetch and apply</string>
    <string name="assistant_login">Login</string>
    <string name="assistant_ec_calibration">Echo canceler calibration in progress</string>
    <string name="assistant_remote_provisioning_login">Enter your login</string>
    <string name="assistant_account_not_validated">Your account has not been validated yet.</string>
    <string name="assistant_error_confirmation_code">The confirmation code is invalid.\r\nPlease try again.</string>
    <string name="assistant_account_validated">Your account has been validated.</string>
    <string name="assistant_error_bad_credentials">Incorrect username or password</string>
    <string name="assistant_codec_down_question">Do you agree to download OpenH264 Video Codec provided by Cisco Systems, Inc.?</string>
    <string name="assistant_codec_downloading">Downloading OpenH264 Video Codec provided by Cisco Systems, Inc.</string>
    <string name="assistant_openh264_downloading">Downloading OpenH264</string>
    <string name="assistant_openh264_restart">Before you can use OpenH264 codec you must restart %s.</string>
    <string name="assistant_openh264_error">Sorry an error has occurred.</string>
    <string name="assistant_codec_downloaded">OpenH264 Video Codec provided by Cisco Systems, Inc. downloaded.</string>
    <string name="wizard_failed">An error occurred, try again later.</string>
    <string name="wizard_server_unavailable">Server unreachable, verify your network connection.</string>
    <string name="wizard_username_unavailable">This username is already taken.</string>
    <string name="assistant_phone_number_unavailable">This phone number is already used.\r\nPlease type a different number.\r\nYou can delete your existing account if you want to reuse your phone number.</string>
    <string name="wizard_username_incorrect">Your username is invalid.</string>
    <string name="assistant_phone_number_incorrect">Your phone number is invalid.</string>
    <string name="wizard_email_incorrect">Your email is invalid.</string>
    <string name="wizard_password_incorrect">Your password is invalid</string>
    <string name="wizard_passwords_unmatched">Passwords do not match.</string>
    <string name="setup_confirm_username">Your username will be %s.\r\n\r\nIt may differ from your input to match requirements.\r\nDo you accept?</string>
    <string name="first_launch_no_login_password">Please enter your login and password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="assistant_choose_country">Choose a country</string>
    <string name="select_your_country">Select your Country</string>
    <string name="country_code">(%s)</string>
    <string name="use_username_instead_or_phone_number">Use a username (optional)</string>
    <string name="use_email_for_validation">Use email address for account validation</string>
    <string name="login_with_username">Use your username and password instead of your phone number</string>
    <string name="phone_number_info_title">What will my phone number be used for?</string>
    <string name="phone_number_info_content">\nThanks to your phone number, your friends will find you more easily.\n\n You will see in your address book who is using Linphone and your friends will know that they can reach you on Linphone as well.\n</string>
    <string name="pref_sipaccount">SIP Account</string>
    <string name="pref_manage_title">Manage</string>
    <string name="pref_disable_account">Disable</string>
    <string name="pref_proxy">Proxy</string>
    <string name="pref_domain">Domain*</string>
    <string name="pref_passwd">Password*</string>
    <string name="pref_username">Username*</string>
    <string name="pref_enable_outbound_proxy">Outbound proxy</string>
    <string name="pref_help_proxy">SIP proxy hostname or ip address (optional)</string>
    <string name="pref_help_outbound_proxy">Route all calls through SIP proxy</string>
    <string name="pref_help_username">Example: john if your account is john@sip.example.org</string>
    <string name="pref_help_domain">sip.example.org if your account is john@sip.example.org</string>
    <string name="pref_help_password">You have to re-enter your password if you edit your username and/or the domain</string>
    <string name="pref_expire_title">Expire</string>
    <string name="pref_avpf">AVPF</string>
    <string name="pref_avpf_rr_interval"> AVPF regular RTCP interval in seconds (between 1 and 5)</string>
    <string name="pref_escape_plus">Replace + by 00</string>
    <string name="pref_link_account">Link your account</string>
    <string name="pref_auth_userid">Auth userid</string>
    <string name="pref_help_auth_userid">Enter authentication userid (optional)</string>
    <string name="pref_display_name">Display name</string>
    <string name="pref_help_display_name">Enter display name (optional)</string>
    <string name="pref_prefix">Prefix</string>
    <string name="pref_transport">Transport</string>
    <string name="pref_transport_udp">UDP</string>
    <string name="pref_transport_tcp">TCP</string>
    <string name="pref_transport_tls">TLS</string>
    <string name="pref_delete_account">Delete this account</string>
    <string name="pref_change_password">Change password</string>
    <string name="pref_default_account">Use as default</string>
    <string name="pref_proxy_push_notif">Allow push notification</string>
    <string name="pref_sipaccounts">SIP Accounts</string>
    <string name="pref_preferences_title">Preferences</string>
    <string name="pref_video_enable_title">Enable Video</string>
    <string name="pref_audio_title">Audio</string>
    <string name="pref_codecs">Codecs</string>
    <string name="pref_video_title">Video</string>
    <string name="pref_overlay">Video overlay</string>
    <string name="pref_overlay_summary">Display call video in overlay when outside the application</string>
    <string name="pref_video_initiate_call_with_video_title">Initiate video calls</string>
    <string name="pref_video_initiate_call_with_video">Always send video requests</string>
    <string name="pref_video_automatically_accept_video_title">Accept incoming video requests</string>
    <string name="pref_video_automatically_accept_video">Always accept video requests</string>
    <string name="pref_video_preset">Video preset</string>
    <string name="pref_preferred_video_size">Preferred video size</string>
    <string name="pref_preferred_fps">Preferred FPS</string>
    <string name="pref_bandwidth_limit">Bandwidth limit in kbits/s</string>
    <string name="pref_call_title">Call</string>
    <string name="pref_chat_title">Chat</string>
    <string name="pref_network_title">Network</string>
    <string name="pref_stun_server">STUN / TURN server</string>
    <string name="pref_ice_enable">Enable ICE</string>
    <string name="pref_advanced_title">Advanced</string>
</resources>