<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="@string/pref_sipaccount_key"
        android:persistent="false"
        android:title="@string/pref_sipaccount">

        <EditTextPreference
            android:dialogMessage="@string/pref_help_username"
            android:inputType="text|textNoSuggestions"
            android:persistent="false"
            android:title="@string/pref_username" />

        <EditTextPreference
            android:dialogMessage="@string/pref_help_auth_userid"
            android:inputType="text|textNoSuggestions"
            android:persistent="false"
            android:title="@string/pref_auth_userid" />

        <EditTextPreference
            android:dialogMessage="@string/pref_help_password"
            android:inputType="textPassword"
            android:persistent="false"
            android:title="@string/pref_passwd" />

        <EditTextPreference
            android:dialogMessage="@string/pref_help_domain"
            android:inputType="textUri"
            android:persistent="false"
            android:title="@string/pref_domain" />

        <EditTextPreference
            android:dialogMessage="@string/pref_help_display_name"
            android:inputType="textPersonName"
            android:persistent="false"
            android:title="@string/pref_display_name" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_advanced_key"
        android:persistent="false"
        android:title="@string/pref_advanced_title">

        <ListPreference
            android:key="@string/pref_transport_key"
            android:persistent="false"
            android:title="@string/pref_transport" />

        <CheckBoxPreference
            android:key="@string/pref_ice_enable_key"
            android:persistent="false"
            android:title="@string/pref_ice_enable" />

        <EditTextPreference
            android:inputType="textUri"
            android:key="@string/pref_stun_server_key"
            android:persistent="false"
            android:title="@string/pref_stun_server" />

        <EditTextPreference
            android:inputType="textUri"
            android:persistent="false"
            android:summary="@string/pref_help_proxy"
            android:title="@string/pref_proxy" />

        <CheckBoxPreference
            android:dialogMessage="@string/pref_help_outbound_proxy"
            android:persistent="false"
            android:summary="@string/pref_help_outbound_proxy"
            android:title="@string/pref_enable_outbound_proxy" />

        <EditTextPreference
            android:key="@string/pref_expire_key"
            android:numeric="integer"
            android:persistent="false"
            android:title="@string/pref_expire_title" />

        <EditTextPreference
            android:key="@string/pref_prefix_key"
            android:persistent="false"
            android:title="@string/pref_prefix" />

        <CheckBoxPreference
            android:key="@string/pref_avpf_key"
            android:persistent="false"
            android:title="@string/pref_avpf" />

        <EditTextPreference
            android:key="@string/pref_avpf_rr_interval_key"
            android:numeric="integer"
            android:persistent="false"
            android:title="@string/pref_avpf_rr_interval" />

        <CheckBoxPreference
            android:key="@string/pref_escape_plus_key"
            android:persistent="false"
            android:title="@string/pref_escape_plus" />

        <Preference
            android:key="@string/pref_link_account_key"
            android:persistent="false"
            android:title="@string/pref_link_account" />

        <CheckBoxPreference
            android:key="@string/pref_proxy_push_notif_key"
            android:persistent="false"
            android:title="@string/pref_proxy_push_notif" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_manage_key"
        android:persistent="false"
        android:title="@string/pref_manage_title">

        <CheckBoxPreference
            android:persistent="false"
            android:title="@string/pref_disable_account" />

        <CheckBoxPreference
            android:persistent="false"
            android:title="@string/pref_default_account" />

        <Preference
            android:persistent="false"
            android:title="@string/pref_change_password" />

        <Preference
            android:persistent="false"
            android:title="@string/pref_delete_account" />

    </PreferenceCategory>

</PreferenceScreen>