<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:linphone="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/accounts_settings_list_header"
            style="@style/settings_category_font"
            android:text="@string/pref_sipaccounts"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/accounts_settings_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/settings_category_font"
            android:text="@string/pref_preferences_title"
            android:paddingTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <org.linphone.settings.widget.BasicSetting
            android:id="@+id/pref_tunnel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:title="@string/pref_tunnel_title"/>

        <org.linphone.settings.widget.BasicSetting
            android:id="@+id/pref_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:title="@string/pref_audio_title"/>

        <org.linphone.settings.widget.BasicSetting
            android:id="@+id/pref_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:title="@string/pref_video_title"/>

        <org.linphone.settings.widget.BasicSetting
            android:id="@+id/pref_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:title="@string/pref_call_title"/>

        <org.linphone.settings.widget.BasicSetting
            android:id="@+id/pref_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:title="@string/pref_chat_title"/>

        <org.linphone.settings.widget.BasicSetting
            android:id="@+id/pref_network"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:title="@string/pref_network_title"/>

        <org.linphone.settings.widget.BasicSetting
            android:id="@+id/pref_advanced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            linphone:title="@string/pref_advanced_title"/>

    </LinearLayout>

</ScrollView>